--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,6 +13,7 @@ flask-restful = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 flask-migrate = "*"
+pyserial = "*"
 
 [requires]
 python_version = "3.8"
