--- a/server/Pipfile
+++ b/server/Pipfile
@@ -14,6 +14,7 @@ flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 flask-migrate = "*"
 pyserial = "*"
+apscheduler = "*"
 
 [requires]
 python_version = "3.8"
