csvダウンロードフォームの作成

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,8 +13,8 @@ flask-restful = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 flask-migrate = "*"
-pyserial = "*"
 apscheduler = "*"
+configparser = "*"
 
 [requires]
 python_version = "3.8"
