--- a/server/Pipfile
+++ b/server/Pipfile
@@ -15,6 +15,7 @@ marshmallow-sqlalchemy = "*"
 flask-migrate = "*"
 apscheduler = "*"
 configparser = "*"
+python-dateutil = "*"
 
 [requires]
 python_version = "3.8"
